--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "shinyangdevelop",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/builders": "^0.11.0",
+    "@discordjs/rest": "^0.2.0-canary.0",
+    "discord-api-types": "^0.26.1",
     "discord.js": "^13.5.1"
   }
 }
