--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@discordjs/builders": "^0.11.0",
     "@discordjs/rest": "^0.2.0-canary.0",
+    "discord": "^0.8.2",
     "discord-api-types": "^0.26.1",
-    "discord.js": "^13.5.1"
+    "discord.js": "^13.5.1",
+    "fs": "^0.0.1-security"
   }
 }
