--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord": "^0.8.2",
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.5.1",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "yarn": "^1.22.17"
   }
 }
