--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Security Manager Paul, for filtering bad words",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "author": "shinyangdevelop",
   "license": "ISC",
