--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-api-types": "^0.26.1",
     "discord.js": "^13.5.1",
     "fs": "^0.0.1-security",
+    "quick.db": "^7.1.3",
     "yarn": "^1.22.17"
   }
 }
